# jsonschema-c

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  instance_validator.c  instance_validator.h  schema_rules.txt  schema_validator.c  schema_validator.h  utils.c  utils.h
tests/: Makefile.am  basic_object_tests.c  basic_schema_tests.c  example_instance.txt  example_schema.txt  jsonschema-test.c
